--- a/common/header/header.css
+++ b/common/header/header.css
@@ -18,25 +18,32 @@ body{
 	justify-content: center;
 }
 
-.logo{
+.header__flex-wrapper{
+	margin-right: -30px;
+	margin-left:  -30px;
+}
+
+.header__flex-inner{
+	margin-right: 30px;
+	margin-left: 30px;
 }
 
 .header__inner{
-	border: 1px solid red;
+	display: flex;
 	max-width: 1440px;
 	width: 100%;
 	height: 100%;
 	padding-right: 135px; 
 	padding-left: 135px;
+
 }
 
 .header__logo-wrapper{
-	width: auto;
-	height: calc(100% - 30px);
-	border: 1px solid red;
-	display: flex;
-	margin-top: 15px;
-	margin-bottom: 15px;
+	cursor: pointer;
+	height: calc(100% - 50px);
+	display: inline-block;
+	margin-top: 25px;
+	margin-bottom: 25px;
 	
 }
 
@@ -44,3 +51,69 @@ body{
 	height: 100%;
 	width: auto;
 }
+
+.header__search-form-wrapper{
+	height: 40px;
+	flex-grow: 1;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.header__search-form{
+	border: 1px solid rgba(235, 235, 241, 1);
+	border-radius: 5px;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	align-items: center;
+}
+
+.search-form__search-img{
+	width: 18px;
+	height: 18px;
+	margin: 0 10px;
+}
+
+.search-form__input{
+	outline:  none;
+	border: none;
+	font-size: 14px;
+	width: 100%;
+}
+
+.header__user-wrapper{
+	display: flex;
+	align-items: center;
+}
+
+.header__vertical-line{
+	height: 100%;
+	width: 1px;
+	background: rgba(235, 235, 241, 1);
+}
+
+.header__username{
+	font-size: 14px;
+	color: rgba(118, 130, 152, 1);
+	padding-right: 10px;
+	padding-left: 18px; 
+}
+
+.user-avatar{
+	border-radius: 50%;
+	height: 100%;
+	height: 100%;
+}
+
+.header__user-avatar{
+	height: 40px;
+	width: 40px;
+	display: flex;
+}
+
+
+
+
+
+
+
